test/integration/integration/tests/resources/tests/httproute-rewrite-path.yaml
# Copyright (c) 2023, WSO2 LLC. (https://www.wso2.com) All Rights Reserved.
#
# WSO2 LLC. licenses this file to you under the Apache License,
# Version 2.0 (the "License"); you may not use this file except
# in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied. See the License for the
# specific language governing permissions and limitations
# under the License.

apiVersion: dp.wso2.com/v1alpha1
kind: API
metadata:
  name: rewrite-path-api
  namespace: gateway-integration-test-infra
spec:
  apiDisplayName: Rewrite Path API
  apiType: REST
  apiVersion: 1.0.0
  context: /rewrite-path-api/1.0.0
  definitionFileRef: swagger-definition-webhook
  prodHTTPRouteRef: rewrite-path-httproute
  organization: wso2-org
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: rewrite-path-httproute
  namespace: gateway-integration-test-infra
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: Default
  hostnames:
  - urlrewrite.gw.wso2.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /rewrite-path-api/1.0.0/prefix/one
      method: GET
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /one
    backendRefs:
    - name: infra-backend-v1
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /rewrite-path-api/1.0.0/full/one
      method: GET
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplaceFullPath
          replaceFullPath: /one
    backendRefs:
    - name: infra-backend-v1
      port: 8080
---
apiVersion: dp.wso2.com/v1alpha1
kind: Authentication
metadata:
  name: disable-api-authentication
  namespace: gateway-integration-test-infra
spec:
  override:
    ext:
      disabled: true
    type: ext
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: rewrite-path-httproute
    namespace: gateway-integration-test-infra
